--- a/package.json
+++ b/package.json
@@ -8,21 +8,27 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack serve --open"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
-    "live-server": "^1.2.1",
+    "css-loader": "^5.2.6",
+    "node-sass": "^6.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.13.1",
+    "sass-loader": "^12.0.0",
+    "style-loader": "^2.0.0",
     "validator": "^13.6.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^5.38.1",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "webpack-cli": "^4.7.0"
   }
 }
