--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "css-loader": "^5.2.6",
     "node-sass": "^6.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.13.1",
